vitrail-pg-macros/tests/ui/fail/update_helper_unsupported_operator.stderr
error: unsupported `where` operator `gt` for scalar field `published` in update helper for model `post`; only `eq` is currently supported
  --> tests/ui/fail/update_helper_unsupported_operator.rs:3:1
   |
 3 | / schema! {
 4 | |     name update_helper_schema
 5 | |
 6 | |     model user {
...  |
20 | | }
   | |_^
...
23 |       let _ = update! {
   |  _____________-
24 | |         crate::update_helper_schema,
25 | |         post {
26 | |             data: {
...  |
35 | |     };
   | |_____- in this macro invocation
   |
   = note: this error originates in the macro `__vitrail_update_where_field_filter_update_helper_schema_post` which comes from the expansion of the macro `update` (in Nightly builds, run with -Z macro-backtrace for more info)
